Save point module 2

--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -373,37 +373,41 @@ Document test results
 ::: {.column width="70%" .bl .pl4 .f3}
 Every test result returned by the `run_test()` function has a `.log()` method that can be used to send the test results to the {{< var validmind.platform >}}:
 
-- When using `run_documentation_tests()`, documentation sections will be automatically populated with the results of all tests registered in the documentation template.
-- When logging individual test results to the platform, you'll need to manually add those results to the desired section of the model documentation.
+- When logging individual test results to the platform, you'll need to manually add those results to the desired section of the validation report.
+- To demonstrate how to add test results to your validation report, we'll log our data quality tests and insert the results via the {{< var validmind.platform >}}.
 
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-multiple-tests" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#configure-and-run-comparison-tests" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Run & log multiple tests**
+**Configure and run comparison tests**
 
 ::: {.f5}
-The [`run_documentation_tests()` function](/validmind/validmind.qmd#run_documentation_tests){target="_blank"} allows you to run multiple tests at once and automatically log the results to your documentation:
+You can leverage the {{< var validmind.developer >}} to easily run comparison tests, between both datasets and models. Here, we compare the original raw dataset and the final preprocessed dataset, then log the results to the {{< var validmind.platform >}}:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cell in the Documenting results section: **Run and log multiple tests**.
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+2. Run all the cells under the Documenting test results section: **Configure and run comparison tests**
 :::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-and-log-an-individual-test" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#log-tests-with-a-unique-identifiers" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Run & log an individual test**
+**Log tests with unique identifiers**
 
 ::: {.f5}
 Next, we'll run an individual test and log the result to the {{< var validmind.platform >}}:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the following cell in the Running tests section: **Run and log an individual test**.
 
 :::
@@ -416,7 +420,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Work with test results
+Add test results to reporting
 
 ::: {.tc}
 [Learn more ...](/notebooks/EXECUTED/model_development/2-start_development_process.ipynb#add-individual-test-results-to-model-documentation){.button target="_blank"}
