--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -663,5 +663,5 @@ In this third module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Finalizing model documentation](finalizing-model-documentation.html){.button target="_blank"}
+[Finalizing Model Documentation](finalizing-model-documentation.html){.button target="_blank"}
 :::
