--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -573,5 +573,5 @@ In this second module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Implementing custom tests](implementing-custom-tests.html){.button target="_blank"}
+[Implementing Custom Tests](implementing-custom-tests.html){.button target="_blank"}
 :::
