--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -363,5 +363,5 @@ In this first module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Learning to run tests](learning-to-run-tests.html){.button target="_blank"}
+[Learning to Run Tests](learning-to-run-tests.html){.button target="_blank"}
 :::
