--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -404,17 +404,17 @@ click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Using {{< var vm.product >}} for model development
+Using {{< var vm.product >}} for model validation
 
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
 In this first module, you learned how to:
 
-- [x] Register a model in the {{< var validmind.platform >}}
 - [x] Install the {{< var validmind.developer >}} in your environment
-- [x] Connect to your registered model in the {{< var validmind.platform >}}
-- [x] Preview and verify your model's documentation template
+- [x] Connect to a model in the {{< var validmind.platform >}} as a validator
+- [x] Preview and verify your model's validation report template
+- [x] View your champion model's documentation
 
 :::
 ::::
@@ -424,5 +424,5 @@ In this first module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Learning to run tests](learning-to-run-tests.html){.button target="_blank"}
+[Running Data Quality Tests](running-data-quality-tests.html){.button target="_blank"}
 :::
