--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -399,16 +399,16 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 <!-- CHANGE THIS TO EXECUTED LATER -->
 
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#log-tests-with-a-unique-identifiers" data-preload="yes"}
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#log-tests-with-a-unique-identifiers" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Log tests with unique identifiers**
 
 ::: {.f5}
-Next, we'll run an individual test and log the result to the {{< var validmind.platform >}}:
+When running individual tests, you can use a custom `result_id` to tag the individual result with a unique identifier:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
-2. Run the following cell in the Running tests section: **Run and log an individual test**.
+2. Run the cell under the following Documenting test results section:  **Log tests with unique identifiers**.
 
 :::
 
@@ -416,14 +416,16 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
 Add test results to reporting
 
 ::: {.tc}
-[Learn more ...](/notebooks/EXECUTED/model_development/2-start_development_process.ipynb#add-individual-test-results-to-model-documentation){.button target="_blank"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+[Learn more ...](/notebooks/tutorials/model_validation/2-start_validation_process.ipynb#add-test-results-to-reporting){.button target="_blank"}
 
 :::
 
@@ -431,26 +433,35 @@ Add test results to reporting
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
-### Add individual test results to model documentation
+### Link validator evidence
 
-With the test results logged, let's head to the model we connected to at the beginning of this notebook and insert our test results into the documentation:
+With some test results logged, let's head to the model we connected to at the beginning of this notebook and insert our test results into the validation report as evidence.
 
+While the example below focuses on a specific test result, you can follow the same general procedure for your other results:
+
+::: {.panel-tabset}
+
+### 1. Link data quality test results
 1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
 
-2. In the left sidebar that appears for your model, click **Documentation**.
+2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
-3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
+3. Locate the Data Preparation section and click on **2.2.1. Data Quality** to expand that section.
 
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **+** button appears, indicating that you can insert a new block.
+4. Under the Class Imbalance Assessment section, locate Validator Evidence then click **Link Evidence to Report**.
 
-5. Click **+** and then select **Test-Driven Block**:
+5. Select the Class Imbalance test results we logged: **ValidMind Data Validation Class Imbalance** 
 
-    - In the search bar, type in `HighPearsonCorrelation`.
-    - Select `HighPearsonCorrelation:balanced_raw_dataset` as the test.
+6. Click **Update Linked Evidence** to add the test results to the validation report.
 
-6. Finally, click **Insert 1 Test Result to Document** to add the test result to the documentation.
+    Confirm that the results for the Class Imbalance test you inserted has been correctly inserted into section **2.2.1. Data Quality** of the report.
 
-    Confirm that the individual results for the high correlation test has been correctly inserted into section **2.3 Correlations and Interactions** of the documentation.
+### 2. Review Class Imbalance test results
+
+- Once linked as evidence to section **2.2.1. Data Quality** note that the ValidMind Data Validation Class Imbalance test results are flagged as **Requires Attention** — as they include comparative results from our initial raw dataset.
+- Click **See evidence details** to review the LLM-generated description that summarizes the test results, that confirm that our final preprocessed dataset actually passes our test.
+
+:::
 
 :::
 ::::
@@ -459,10 +470,10 @@ With the test results logged, let's head to the model we connected to at the beg
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/" background-interactive="true" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
-**Insert a test-driven block**
+**Link validator evidence**
 
 ::: {.f6}
-2.3 Correlations and Interactions — `HighPearsonCorrelation:balanced_raw_dataset`
+2.2.1. Data Quality — **ValidMind Data Validation Class Imbalance**
 
 :::
 
@@ -473,113 +484,23 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Prepare datasets for model evaluation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable .center}
+<!-- CHANGE THIS TO EXECUTED LATER -->
 
-:::: {.columns}
-::: {.column width="50%" .pr4 .f2}
-Model testing with {{< var vm.product >}}
-
-:::
-
-::: {.column width="50%" .bl .pl4 .f2}
-Try it **live** on the next pages. {{< fa hand-point-right >}}
-
-:::
-::::
-
-::: {.f3}
-<br>
-So far, we’ve focused on the data assessment and pre-processing that usually occurs prior to any models being built. Now, let’s instead assume we have already built a model and we want to incorporate some model results into our documentation:
-
-::: {.panel-tabset .f4}
-
-### 1. Train your model
-
-Using {{< var vm.product >}} tests, we’ll train a simple logistic regression model on our dataset and evaluate its performance by using the `LogisticRegression` class from the `sklearn.linear_model`.
-
-### 2. Initialize the model object
-
-The last step for evaluating the model’s performance is to initialize the {{< var vm.product >}} `Dataset` and `Model` objects in preparation for assigning model predictions to each dataset.
-
-### 3. Assign predictions
-
-Once the model has been registered you can assign model predictions to the training and test datasets. The `assign_predictions()` method from the `Dataset` object can link existing predictions to any number of models.
-
-### 4. Run the model evaluation tests
-In this next example, we’ll focus on running the tests within the Model Development section of the model documentation. Only tests associated with this section will be executed, and the corresponding results will be updated in the model documentation.
-
-:::
-
-:::
-
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#train-simple-logistic-regression-model" data-preload="yes"}
+## {background-iframe="/notebooks/tutorials/model_validation/2-start_validation_process.html#split-the-preprocessed-dataset" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Train your model**
+**Split the preprocessed dataset**
 
 ::: {.f5}
-Using {{< var vm.product >}} tests, we'll train a simple logistic regression model on our dataset and evaluate its performance:
+So far, we've rebalanced our raw dataset and used the results of {{< var vm.product >}} tests to additionally remove highly correlated features from our dataset. Next, let's now spilt our dataset into train and test in preparation for model evaluation testing:
 
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run all the cells under the Model testing section: **Train simple logistic regression model**.
+1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
+2. Run all the cells under the following section: **Split the preprocessed dataset**.
 :::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#initialize-model-evaluation-objects" data-preload="yes"}
-
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Initialize a model object**
-
-::: {.f5}
-Use the `init_dataset` and [`init_model` functions](/validmind/validmind.qmd#init_model){target="_blank"} to initialize these objects:
-
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Initialize model evaluation objects**.
-
-:::
-
-When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#assign-predictions" data-preload="yes"}
-
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Assign predictions**
-
-::: {.f5}
-Use the [`assign_predictions()` method](/validmind/validmind/vm_models.qmd#assign_predictions){target="_blank"} from the `Dataset` object to link existing predictions to any number of models:
-
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Assign predictions**.
-
-:::
-
-When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#run-the-model-evaluation-tests" data-preload="yes"}
-
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
-**Run the model evaluation tests**
-
-::: {.f5}
-Finally, we'll run only the tests within the Model Development section of the model documentation:
-
-1. Continue with **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the cell under the following Model testing section: **Run the model evaluation tests**.
-
-:::
-
-When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -587,18 +508,17 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Learning to run tests
-
+Running data quality tests
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
 In this second module, you learned how to:
 
 - [x] Identify relevant tests to run from {{< var vm.product >}}'s test repository
-- [x] Initialize {{< var vm.product >}} `Dataset` and `Model` objects
+- [x] Initialize {{< var vm.product >}} `Dataset` objects
 - [x] Run out-of-the-box tests with the {{< var validmind.developer >}}
 - [x] Log test results to the {{< var validmind.platform >}}
-- [x] Insert logged test results into your model's documentation
+- [x] Attach logged test results onto your model's validation report
 
 :::
 ::::
@@ -608,5 +528,5 @@ In this second module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Implementing custom tests](implementing-custom-tests.html){.button target="_blank"}
+[Developing Challenger Models](developing-challenger-models.html){.button target="_blank"}
 :::
